[package]
name = "nostr-tracking-token-remover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
env_logger = "0.11.3"
linkify = "0.10.0"
log = "0.4.22"
nostr-sdk = "0.32.0"
tokio = "1.38.0"
url = "2.5.2"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false
