[package]
name = "nostr-tracking-token-remover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
linkify = "0.10"
log = "0.4"
nostr-sdk = { version = "0.33", features = ["nip04"] }
tokio = "1.39"
untrack = "0.1"
url = "2.5"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false
